// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Engine Contract v1 — capture engine output (goldens) algorithm (strict, auto) 1`] = `
"{
  "candidates": [
    {
      "decomposition": [
        "algorithm"
      ],
      "form": "algorithm",
      "functionalStatement": "v1 returns a minimal deterministic analysis: surface form is preserved, decomposition is the whole word, and the vowel path is extracted from the Seven-vowel set (A/E/I/O/U/Y/Ë).",
      "language": "unknown",
      "notes": null,
      "vowelPath": "A-O-I"
    }
  ],
  "engineVersion": "v1.0.0",
  "evidence": {
    "basis": "algorithm",
    "math7": {
      "indices": [
        0,
        3,
        2
      ],
      "sum": 5,
      "totalMod7": 5,
      "vowels": [
        "A",
        "O",
        "I"
      ]
    },
    "surfacePath": "A-O-I",
    "surfaceVowels": [
      "A",
      "O",
      "I"
    ]
  },
  "meta": {
    "canonVersion": "canon-v1.0",
    "contractVersion": "scientific-output-v1.1",
    "engineVersion": "v1.0.0",
    "rulesetVersion": "ruleset-v1.2"
  },
  "normalizedWord": "algorithm",
  "warnings": null,
  "word": "algorithm"
}"
`;

exports[`Engine Contract v1 — capture engine output (goldens) damage (strict, auto) 1`] = `
"{
  "candidates": [
    {
      "decomposition": [
        "damage"
      ],
      "form": "damage",
      "functionalStatement": "v1 returns a minimal deterministic analysis: surface form is preserved, decomposition is the whole word, and the vowel path is extracted from the Seven-vowel set (A/E/I/O/U/Y/Ë).",
      "language": "unknown",
      "notes": null,
      "vowelPath": "A-A-E"
    }
  ],
  "engineVersion": "v1.0.0",
  "evidence": {
    "basis": "damage",
    "math7": {
      "indices": [
        0,
        0,
        1
      ],
      "sum": 1,
      "totalMod7": 1,
      "vowels": [
        "A",
        "A",
        "E"
      ]
    },
    "surfacePath": "A-A-E",
    "surfaceVowels": [
      "A",
      "A",
      "E"
    ]
  },
  "meta": {
    "canonVersion": "canon-v1.0",
    "contractVersion": "scientific-output-v1.1",
    "engineVersion": "v1.0.0",
    "rulesetVersion": "ruleset-v1.2"
  },
  "normalizedWord": "damage",
  "warnings": null,
  "word": "damage"
}"
`;

exports[`Engine Contract v1 — capture engine output (goldens) father (strict, auto) 1`] = `
"{
  "candidates": [
    {
      "decomposition": [
        "father"
      ],
      "form": "father",
      "functionalStatement": "v1 returns a minimal deterministic analysis: surface form is preserved, decomposition is the whole word, and the vowel path is extracted from the Seven-vowel set (A/E/I/O/U/Y/Ë).",
      "language": "unknown",
      "notes": null,
      "vowelPath": "A-E"
    }
  ],
  "engineVersion": "v1.0.0",
  "evidence": {
    "basis": "father",
    "math7": {
      "indices": [
        0,
        1
      ],
      "sum": 1,
      "totalMod7": 1,
      "vowels": [
        "A",
        "E"
      ]
    },
    "surfacePath": "A-E",
    "surfaceVowels": [
      "A",
      "E"
    ]
  },
  "meta": {
    "canonVersion": "canon-v1.0",
    "contractVersion": "scientific-output-v1.1",
    "engineVersion": "v1.0.0",
    "rulesetVersion": "ruleset-v1.2"
  },
  "normalizedWord": "father",
  "warnings": null,
  "word": "father"
}"
`;

exports[`Engine Contract v1 — capture engine output (goldens) gjak (strict, auto) 1`] = `
"{
  "candidates": [
    {
      "decomposition": [
        "gjak"
      ],
      "form": "gjak",
      "functionalStatement": "v1 returns a minimal deterministic analysis: surface form is preserved, decomposition is the whole word, and the vowel path is extracted from the Seven-vowel set (A/E/I/O/U/Y/Ë).",
      "language": "unknown",
      "notes": null,
      "vowelPath": "A"
    }
  ],
  "engineVersion": "v1.0.0",
  "evidence": {
    "basis": "gjak",
    "math7": {
      "indices": [
        0
      ],
      "sum": 0,
      "totalMod7": 0,
      "vowels": [
        "A"
      ]
    },
    "surfacePath": "A",
    "surfaceVowels": [
      "A"
    ]
  },
  "meta": {
    "canonVersion": "canon-v1.0",
    "contractVersion": "scientific-output-v1.1",
    "engineVersion": "v1.0.0",
    "rulesetVersion": "ruleset-v1.2"
  },
  "normalizedWord": "gjak",
  "warnings": null,
  "word": "gjak"
}"
`;

exports[`Engine Contract v1 — capture engine output (goldens) internet (strict, auto) 1`] = `
"{
  "candidates": [
    {
      "decomposition": [
        "internet"
      ],
      "form": "internet",
      "functionalStatement": "v1 returns a minimal deterministic analysis: surface form is preserved, decomposition is the whole word, and the vowel path is extracted from the Seven-vowel set (A/E/I/O/U/Y/Ë).",
      "language": "unknown",
      "notes": null,
      "vowelPath": "I-E-E"
    }
  ],
  "engineVersion": "v1.0.0",
  "evidence": {
    "basis": "internet",
    "math7": {
      "indices": [
        2,
        1,
        1
      ],
      "sum": 4,
      "totalMod7": 4,
      "vowels": [
        "I",
        "E",
        "E"
      ]
    },
    "surfacePath": "I-E-E",
    "surfaceVowels": [
      "I",
      "E",
      "E"
    ]
  },
  "meta": {
    "canonVersion": "canon-v1.0",
    "contractVersion": "scientific-output-v1.1",
    "engineVersion": "v1.0.0",
    "rulesetVersion": "ruleset-v1.2"
  },
  "normalizedWord": "internet",
  "warnings": null,
  "word": "internet"
}"
`;

exports[`Engine Contract v1 — capture engine output (goldens) love (strict, auto) 1`] = `
"{
  "candidates": [
    {
      "decomposition": [
        "love"
      ],
      "form": "love",
      "functionalStatement": "v1 returns a minimal deterministic analysis: surface form is preserved, decomposition is the whole word, and the vowel path is extracted from the Seven-vowel set (A/E/I/O/U/Y/Ë).",
      "language": "unknown",
      "notes": null,
      "vowelPath": "O-E"
    }
  ],
  "engineVersion": "v1.0.0",
  "evidence": {
    "basis": "love",
    "math7": {
      "indices": [
        3,
        1
      ],
      "sum": 4,
      "totalMod7": 4,
      "vowels": [
        "O",
        "E"
      ]
    },
    "surfacePath": "O-E",
    "surfaceVowels": [
      "O",
      "E"
    ]
  },
  "meta": {
    "canonVersion": "canon-v1.0",
    "contractVersion": "scientific-output-v1.1",
    "engineVersion": "v1.0.0",
    "rulesetVersion": "ruleset-v1.2"
  },
  "normalizedWord": "love",
  "warnings": null,
  "word": "love"
}"
`;

exports[`Engine Contract v1 — capture engine output (goldens) mathematics (strict, auto) 1`] = `
"{
  "candidates": [
    {
      "decomposition": [
        "mathematics"
      ],
      "form": "mathematics",
      "functionalStatement": "v1 returns a minimal deterministic analysis: surface form is preserved, decomposition is the whole word, and the vowel path is extracted from the Seven-vowel set (A/E/I/O/U/Y/Ë).",
      "language": "unknown",
      "notes": null,
      "vowelPath": "A-E-A-I"
    }
  ],
  "engineVersion": "v1.0.0",
  "evidence": {
    "basis": "mathematics",
    "math7": {
      "indices": [
        0,
        1,
        0,
        2
      ],
      "sum": 3,
      "totalMod7": 3,
      "vowels": [
        "A",
        "E",
        "A",
        "I"
      ]
    },
    "surfacePath": "A-E-A-I",
    "surfaceVowels": [
      "A",
      "E",
      "A",
      "I"
    ]
  },
  "meta": {
    "canonVersion": "canon-v1.0",
    "contractVersion": "scientific-output-v1.1",
    "engineVersion": "v1.0.0",
    "rulesetVersion": "ruleset-v1.2"
  },
  "normalizedWord": "mathematics",
  "warnings": null,
  "word": "mathematics"
}"
`;

exports[`Engine Contract v1 — capture engine output (goldens) philosophy (strict, auto) 1`] = `
"{
  "candidates": [
    {
      "decomposition": [
        "philosophy"
      ],
      "form": "philosophy",
      "functionalStatement": "v1 returns a minimal deterministic analysis: surface form is preserved, decomposition is the whole word, and the vowel path is extracted from the Seven-vowel set (A/E/I/O/U/Y/Ë).",
      "language": "unknown",
      "notes": null,
      "vowelPath": "I-O-O-Y"
    }
  ],
  "engineVersion": "v1.0.0",
  "evidence": {
    "basis": "philosophy",
    "math7": {
      "indices": [
        2,
        3,
        3,
        5
      ],
      "sum": 13,
      "totalMod7": 6,
      "vowels": [
        "I",
        "O",
        "O",
        "Y"
      ]
    },
    "surfacePath": "I-O-O-Y",
    "surfaceVowels": [
      "I",
      "O",
      "O",
      "Y"
    ]
  },
  "meta": {
    "canonVersion": "canon-v1.0",
    "contractVersion": "scientific-output-v1.1",
    "engineVersion": "v1.0.0",
    "rulesetVersion": "ruleset-v1.2"
  },
  "normalizedWord": "philosophy",
  "warnings": null,
  "word": "philosophy"
}"
`;

exports[`Engine Contract v1 — capture engine output (goldens) shter (strict, auto) 1`] = `
"{
  "candidates": [
    {
      "decomposition": [
        "shter"
      ],
      "form": "shter",
      "functionalStatement": "v1 returns a minimal deterministic analysis: surface form is preserved, decomposition is the whole word, and the vowel path is extracted from the Seven-vowel set (A/E/I/O/U/Y/Ë).",
      "language": "unknown",
      "notes": null,
      "vowelPath": "E"
    }
  ],
  "engineVersion": "v1.0.0",
  "evidence": {
    "basis": "shter",
    "math7": {
      "indices": [
        1
      ],
      "sum": 1,
      "totalMod7": 1,
      "vowels": [
        "E"
      ]
    },
    "surfacePath": "E",
    "surfaceVowels": [
      "E"
    ]
  },
  "meta": {
    "canonVersion": "canon-v1.0",
    "contractVersion": "scientific-output-v1.1",
    "engineVersion": "v1.0.0",
    "rulesetVersion": "ruleset-v1.2"
  },
  "normalizedWord": "shter",
  "warnings": null,
  "word": "shter"
}"
`;

exports[`Engine Contract v1 — capture engine output (goldens) study (strict, auto) 1`] = `
"{
  "candidates": [
    {
      "decomposition": [
        "study"
      ],
      "form": "study",
      "functionalStatement": "v1 returns a minimal deterministic analysis: surface form is preserved, decomposition is the whole word, and the vowel path is extracted from the Seven-vowel set (A/E/I/O/U/Y/Ë).",
      "language": "unknown",
      "notes": null,
      "vowelPath": "U-Y"
    }
  ],
  "engineVersion": "v1.0.0",
  "evidence": {
    "basis": "study",
    "math7": {
      "indices": [
        4,
        5
      ],
      "sum": 9,
      "totalMod7": 2,
      "vowels": [
        "U",
        "Y"
      ]
    },
    "surfacePath": "U-Y",
    "surfaceVowels": [
      "U",
      "Y"
    ]
  },
  "meta": {
    "canonVersion": "canon-v1.0",
    "contractVersion": "scientific-output-v1.1",
    "engineVersion": "v1.0.0",
    "rulesetVersion": "ruleset-v1.2"
  },
  "normalizedWord": "study",
  "warnings": null,
  "word": "study"
}"
`;

exports[`Engine Contract v1 — capture engine output (goldens) zemër (strict, auto) 1`] = `
"{
  "candidates": [
    {
      "decomposition": [
        "zemër"
      ],
      "form": "zemër",
      "functionalStatement": "v1 returns a minimal deterministic analysis: surface form is preserved, decomposition is the whole word, and the vowel path is extracted from the Seven-vowel set (A/E/I/O/U/Y/Ë).",
      "language": "unknown",
      "notes": null,
      "vowelPath": "E-Ë"
    }
  ],
  "engineVersion": "v1.0.0",
  "evidence": {
    "basis": "zemër",
    "math7": {
      "indices": [
        1,
        6
      ],
      "sum": 7,
      "totalMod7": 0,
      "vowels": [
        "E",
        "Ë"
      ]
    },
    "surfacePath": "E-Ë",
    "surfaceVowels": [
      "E",
      "Ë"
    ]
  },
  "meta": {
    "canonVersion": "canon-v1.0",
    "contractVersion": "scientific-output-v1.1",
    "engineVersion": "v1.0.0",
    "rulesetVersion": "ruleset-v1.2"
  },
  "normalizedWord": "zemër",
  "warnings": null,
  "word": "zemër"
}"
`;
